Use fixed-width columns and word wrapping in jvm-info table
Review-thread: http://icedtea.classpath.org/pipermail/thermostat/2017-June/023692.html

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -32,3 +32,11 @@
 .fa-frown-o {
   margin-bottom: 20px;
 }
+
+.table-fixed {
+  table-layout: fixed;
+}
+
+.break-word-wrap {
+  overflow-wrap: break-word;
+}
